<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fabricIdEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/enter_fabric_id_hint_text"/>

    <EditText
        android:id="@+id/deviceIdEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/fabricIdEd"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/enter_device_id_hint_text"/>

    <TextView
        android:id="@+id/updateAddressBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@id/deviceIdEd"
        android:background="@android:color/darker_gray"
        android:text="@string/update_device_address_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/readThermoWeeklyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@id/updateAddressBtn"
        android:background="@android:color/darker_gray"
        android:text="@string/read_thermo_weekly_btn_text"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/setThermoWeeklyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/updateAddressBtn"
        android:background="@android:color/darker_gray"
        android:text="@string/set_thermo_weekly_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/ReadLocalTemperatureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_below="@id/readThermoWeeklyBtn"
        android:background="@android:color/darker_gray"
        android:text="@string/read_thermo_attribute_btn_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/commandStatusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/ReadLocalTemperatureBtn"
        android:singleLine="false"
        android:minLines="4"
        android:textSize="20sp"/>

</RelativeLayout>
